# black_maine_ros

./: README.md
black_maine_app/: CMakeLists.txt  package.xml
black_maine_app/action/: Distribution.action
black_maine_app/config/: black_maine_app.yaml
black_maine_app/launch/: all.launch  amcl_init_pose.launch  distribution.launch  mqtt_listener.launch
black_maine_app/node/: amcl_initialpose.py  mqtt_listener.py  mqtt_listener_copy.py  mqtt_publisher.py  test.py
black_maine_app/script/: start.sh
black_maine_app/src/: distribution_client.cpp  distribution_server.cpp  test_server.cpp
black_maine_app/srv/: Confirmation.srv
black_maine_bringup/: CMakeLists.txt  package.xml
black_maine_bringup/config/: cmd_vel_mux.yaml  joy_teleop.yaml
black_maine_bringup/launch/: bringup.launch  bringup_respawn.launch
black_maine_description/: CMakeLists.txt  package.xml
black_maine_description/launch/: view_model.launch
black_maine_description/mesh/: arm_base.stl  body.stl
black_maine_description/urdf/: black_maine_robot.urdf.xacro
black_maine_description/viz/: model.rviz
black_maine_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
black_maine_moveit_config/config/: black_maine_robot.srdf  fake_controllers.yaml  kinematics.yaml  ros_controllers.yaml
black_maine_moveit_config/launch/: black_maine_robot_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  execute.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
black_maine_msgs/: CMakeLists.txt  package.xml
black_maine_navigation/: CMakeLists.txt  package.xml
black_maine_navigation/config/: amcl.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  (+4 more)
black_maine_panel/: CMakeLists.txt  README.md  package.xml
black_maine_panel/include/: qml_mediator.h
black_maine_panel/resource/: resource.qrc
black_maine_panel/resource/qml/: main.qml
black_maine_panel/src/: black_maine_panel_node.cpp
black_maine_viz/: CMakeLists.txt  package.xml
(+14 files in other folders)
