<?xml version="1.0"?>
<package format="2">
  <name>black_maine_panel</name>
  <version>1.1.0</version>
  <description>Black Maine AGV Panel</description>

  <maintainer email="ye.tian@iquotient-robotics.com">Ye TIAN</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
